--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -22,6 +22,11 @@
     width: 48px;
   }
 
+.nav-logo {
+  width: 48px;
+  height: 48px;
+}
+
 .sidenav {
     position: fixed;
   top: 0;
@@ -34,7 +39,7 @@
   background: #cfd8dc;
   box-shadow: crimson;
   transition: all 0.3s ease-in-out;
-  
+  transform: translate(0);
   overflow-x: hidden;
 
 }
@@ -58,6 +63,38 @@
     align-items: center;
     border-radius: 50%;
 }
+
+.sidenav-links {
+    display: block;
+    text-align: center;
+}
+.sidenav-link{
+    padding: 0.5rem 1.75rem;
+  }
+  .sidenav-link a{
+    font-size: 1.5rem;
+    transition: all 0.3s linear;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: #282c34;
+  }
+
+
+
+  .sidenav-tools-dropdown{
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 300ms, visibility 300ms;
+    height: 0;
+
+  }
+  
+.tools-link:hover > .sidenav-tools-dropdown{
+ visibility: visible;
+ opacity: 1;
+ height: max-content;
+}
+
 .overlay{
     display: none;
     position: fixed ;
@@ -71,3 +108,9 @@
 .overlay-shown {
     display: block;
 }
+
+@media only screen and (max-width: 800px) {
+    .sidenav {
+      width: 100dvw;
+    }
+  }
